--- a/app/views/user/content_left.ejs
+++ b/app/views/user/content_left.ejs
@@ -9,7 +9,7 @@
         <% if(data_10_post.length){ 
             for(var i = 0;i < data_10_post.length ;i++) { %>
             <li class="list-group-item text-left">
-                <a class="bg-gray text-info" href="#">
+                <a class="bg-gray text-info" href="/info_post/<%= data_10_post[i].ID %>">
                     <span class="badge text-danger"><%= i+1 %>.</span>
                     <%= data_10_post[i].title %>
                         (<span class="badge"><img src="<%= data_10_post[i].avatar %>" alt="avatar" style="width: 20px; height: 20px; border-radius: 50%;"> <%= data_10_post[i].name %></span>)
