--- a/app/views/user/personel_page.ejs
+++ b/app/views/user/personel_page.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>personel_page</title>
+    <title>home</title>
     <%- include("./header") %>
 </head>
 
@@ -14,54 +14,110 @@
                 <%- include("./content_left_personel") %>
                     <div class="col-sm-8">
                         <% if(data.length){ 
-                            for(var i = data.length -1;i >= 0;i--) { %>
+                            for(var i = data.length-1;i >= 0 ;i--) { %>
                             <h3>
-                                <%= data[i].title %>
-                                    <span class="badge badge-danger"><a href="#"> <button type="button" class="btn btn-danger">Edit post</button></a></span>
+                                <a href="/edit_post/<%= data[i].ID %>" class="text-info">
+                                    <%= data[i].title %>
+                                </a>
                             </h3>
-                            <h5>
-                                <%= data[i].date_post %>
 
-                                    <% if(data[i].privacy != 1) {%>
-                                        <button type="button" class="btn btn-success">publish</button>
-                                        <% } else {%>
-                                            <button type="button" class="btn btn-success">private</button>
-                                            <% }%>
-
-                            </h5>
+                            <div class="d-flex flex-row comment-row m-t-0">
+                                <div class="comment-text w-100">
+                                    <h6 class="font-medium text-info">
+                                        <span class="text-danger"><%= data[i].date_post %></span>
+                                    </h6>
+                                </div>
+                            </div><br>
                             <% if(data[i].image != '') {%>
                                 <div class="fakeimg"><img src="<%= data[i].image %>" alt="image" height="290px"></div>
+                                <br><br>
                                 <% }%>
-                                    <br><br>
+
                                     <p>
                                         <%= data[i].content %>
                                     </p>
                                     <br>
                                     <span>
-                            <div class="btn-group btn-group-sm float-left" role="group" aria-label="Basic example">
-                                <p>1 like</p>
-                            </div>
-                            <div class="btn-group btn-group-sm float-right" role="group" aria-label="Basic example">
-                                <a href="#"></a> <button type="button" class="btn btn-success">Like</button></a>
-                                <a href="#"></a><button type="button" class="btn btn-success">Commands</button></a>
-                                <a href="#"></a><button type="button" class="btn btn-success">Share</button></a>
-                            </div>
-                        </span>
-                                    <br><br>
-                                    <p>Nguyen Van A: right</p>
-
-                                    <br><br>
-                                    <hr>
-                                    <% } } else{ %>
-                                        <p>Not found post</p>
-
-                                        <% }; %>
-
+                            <div class="btn-group btn-group-sm float-left text-danger" role="group" aria-label="Basic example">
+                                <% var count_like = 0;
+                                   for(let j = 0; j < data_s_l_c.length; j++){
+                                       if(data_s_l_c[j].ID_post == data[i].ID && data_s_l_c[j].type == 0){
+                                           count_like = count_like+1;
+                                       }
+                                   } %>
+                                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#info_userlike<%= data[i].ID %>">
+                                    <%- count_like %> like
+                                    </button> <br>
+                                    <div class="modal" id="info_userlike<%= data[i].ID %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title text-info" id="exampleModalLabel">List user like</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                    </button>
                     </div>
-
+                    <div class="modal-body">
+                        <% for(let j = 0; j < data_s_l_c.length; j++){
+                            if(data_s_l_c[j].ID_post == data[i].ID && data_s_l_c[j].type == 0){ %>
+                            <a href="/info_personel/<%= data_s_l_c[j].ID_user %>">
+                                <%= data_s_l_c[j].name %> <br>
+                            </a>
+                            <%    }
+                        } %>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
             </div>
         </div>
-        <%- include("./footer") %>
+        </div>
+
+        </div>
+        <div class="btn-group btn-group-sm float-right" role="group" aria-label="Basic example">
+            <a href="/like/<%= data[i].ID %>"><button class="btn btn-success mr-2"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
+  <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.964.22.817.533 2.512.062 4.51a9.84 9.84 0 0 1 .443-.05c.713-.065 1.669-.072 2.516.21.518.173.994.68 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.162 3.162 0 0 1-.488.9c.054.153.076.313.076.465 0 .306-.089.626-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.826 4.826 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.616.849-.231 1.574-.786 2.132-1.41.56-.626.914-1.279 1.039-1.638.199-.575.356-1.54.428-2.59z"/>
+</svg></button></a>
+            <a href="#"><button class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+  <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
+</svg></button></a>
+        </div>
+        </span>
+        <br><br>
+        <form action="/comments" method="POST">
+            <input type="text" name="id_post" value="<%= data[i].ID %>" style="display: none;">
+            <textarea class="form-control" name="content_comment" id="exampleFormControlTextarea1" rows="2"></textarea>
+            <button type="submit" class="btn btn-success float-right">Comments</button>
+        </form><br><br>
+        <!-- Comment Row -->
+        <% for(let j = 0; j < data_s_l_c.length; j++){
+            if(data_s_l_c[j].ID_post == data[i].ID && data_s_l_c[j].type == 1){ %>
+            <div class="d-flex flex-row comment-row m-t-0">
+                <a href="/info_personel/<%= data_s_l_c[j].ID_user %>">
+                    <div class="p-2"><img src="<%= data_s_l_c[j].avatar %>" alt="user" width="30" height="30" class="rounded-circle"></div>
+                </a>
+                <div class="comment-text w-100">
+                    <h6 class="font-medium text-info">
+
+                        <a href="/info_personel/<%= data_s_l_c[j].ID_user %>">
+                            <%= data_s_l_c[j].name %>
+                        </a> <span class="text-muted float-right"><%= data_s_l_c[j].date_implement %></span></h6> <span class="m-b-15 d-block"><%= data_s_l_c[j].comment %></span>
+
+                </div>
+            </div>
+            <%    }
+                        } %>
+                <br>
+                <hr style="border: 1px solid green">
+                <% } } else{ %>
+                    <p>Not found post</p>
+
+                    <% }; %>
+
+                        </div>
+                        </div>
+                        </div>
+                        <%- include("./footer") %>
 </body>
 
 </html>
