--- a/app/views/user/content_left_personel.ejs
+++ b/app/views/user/content_left_personel.ejs
@@ -36,26 +36,26 @@
                     <div class="modal-content">
                         <form action="/update_info_personel" method="POST" enctype="multipart/form-data">
                             <div class="modal-header">
-                                <h5 class="modal-title text-info" id="exampleModalLabel">Update information</h5>
+                                <h6 class="modal-title text-info" id="exampleModalLabel">Update information</h6>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                        <span aria-hidden="true">&times;</span>
                                     </button>
                             </div>
                             <div class="modal-body">
-                                <h5 class="modal-title text-left text-danger">Name</h5>
-                                <input type="text" name="name" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"><br>
-                                <h5 class="modal-title text-left text-danger">Email</h5>
-                                <input type="email" name="email" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"><br>
-                                <h5 class="modal-title text-left text-danger">Password</h5>
-                                <input type="password" name="pass" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"><br>
-                                <h5 class="modal-title text-left text-danger">Mobile</h5>
-                                <input type="tel" name="mobile" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"><br>
-                                <h5 class="modal-title text-left text-danger">Country</h5>
-                                <input type="text" name="country" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1"><br>
+                                <h6 class="modal-title text-left text-danger">Name</h6>
+                                <input type="text" name="name" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+                                <h6 class="modal-title text-left text-danger">Email</h6>
+                                <input type="email" name="email" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+                                <h6 class="modal-title text-left text-danger">Password</h6>
+                                <input type="password" name="pass" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+                                <h6 class="modal-title text-left text-danger">Mobile</h6>
+                                <input type="tel" name="mobile" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
+                                <h6 class="modal-title text-left text-danger">Country</h6>
+                                <input type="text" name="country" class="form-control" placeholder="" aria-label="" aria-describedby="basic-addon1">
 
-                                <h5 class="modal-title text-left text-danger">File avatar</h5><br>
+                                <h6 class="modal-title text-left text-danger">File avatar</h6>
                                 <input type="file" name="image_file_avatar" class="form-control-file" id="exampleFormControlFile1">
-                                <br>
+
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
