--- a/app/views/user/info_personel.ejs
+++ b/app/views/user/info_personel.ejs
@@ -12,11 +12,57 @@
         <div class="container" style="margin-top:70px">
             <div class="row">
                 <div class="col-sm-4 text-center">
-
                     <% if(data.length){ 
-        for(var i = 0;i < data.length;i++) { %>
+                    for(var i = 0;i < data.length;i++) { %>
                         <% if(data[i].image != '') {%>
-                            <div class="fakeimg_avata"><img src="<%= data[i].avatar %>" alt="image" width="230px" height="240px"></div>
+                            <div class="fakeimg_avata">
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#choose_avatar<%= data[i].ID %>">
+                                <img src="<%= data[i].avatar %>" alt="image" width="230px" height="225px">
+                                </button>
+                                <!-- Modal -->
+                                <div class="modal" id="choose_avatar<%= data[i].ID%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-lg modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title text-info" id="exampleModalLabel">View image</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                       <span aria-hidden="true">&times;</span>
+                                    </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                                    <div class="carousel-inner">
+                                                        <div class="carousel-item active">
+                                                            <img class="d-block w-100" src="<%= data[0].avatar %>" alt="image" height="400px">
+                                                        </div>
+                                                        <% if(avatar.length){ 
+                                                           for(var j = 1;j < avatar.length;j++) { %>
+                                                            <div class="carousel-item">
+                                                                <img class="d-block w-100" src="<%= avatar[j].image_update %>" alt="image" height="400px">
+                                                            </div>
+                                                            <% } } else{ %>
+                                                                <p>Not found image</p>
+
+                                                                <% }; %>
+                                                    </div>
+                                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                        <span class="sr-only">Previous</span>
+                                                    </a>
+                                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                        <span class="sr-only">Next</span>
+                                                    </a>
+                                                </div>
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <% }%>
                                 <br>
                                 <ul class="nav nav-pills flex-column text-center text-info">
@@ -48,8 +94,8 @@
                                     <% }; %>
                                         <hr class="d-sm-none">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#viewimage">
- View image
-</button> <br>
+                                        View image
+                                        </button> <br>
 
                                         <!-- Modal -->
                                         <div class="modal" id="viewimage" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
