--- a/app/views/user/menu.ejs
+++ b/app/views/user/menu.ejs
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="/personel_page">Personal page</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">List author</a>
+                <a class="nav-link" href="/list_author">List author</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
