--- a/app/views/user/content_left.ejs
+++ b/app/views/user/content_left.ejs
@@ -12,7 +12,7 @@
                 <a class="bg-gray text-info" href="/info_post/<%= data_10_post[i].ID %>">
                     <span class="badge text-danger"><%= i+1 %>.</span>
                     <%= data_10_post[i].title %>
-                        (<span class="badge"><img src="<%= data_10_post[i].avatar %>" alt="avatar" style="width: 20px; height: 20px; border-radius: 50%;"> <%= data_10_post[i].name %></span>)
+                        <!-- <span class="badge">(<img src="<%= data_10_post[i].avatar %>" alt="avatar" style="width: 20px; height: 20px; border-radius: 50%;"> <%= data_10_post[i].name %></span>) -->
                 </a>
             </li>
             <% } %>
