--- a/app/views/user/footer.ejs
+++ b/app/views/user/footer.ejs
@@ -5,9 +5,10 @@
         <!--Grid column-->
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0 mt-2">
             <h5 class="text-uppercase">About us</h5>
-
             <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam voluptatem veniam, est atque cumque eum delectus sint!
+                My name is Vo Dinh Nghia, I was born and raised in the countryside of Binh Son district, Quang Ngai province. I entered Ho Chi Minh City to live and study about 7 years ago, then I studied materials science at University of Sciences, after 1.5 years for
+                some reasons I decided stop studying at school. Until 2016, I decided the university exam again and passed the computer science major of Ho Chi Minh Industrial University, here I am interested in my studies, computer science has helped
+                me practice more skills new....
             </p>
         </div>
         <!--Grid column-->
@@ -18,16 +19,10 @@
 
             <ul class="list-unstyled mb-0">
                 <li>
-                    <a href="#!" class="text-white">Link 1</a>
+                    <a href="https://vnexpress.net/so-hoa" class="text-white">vnexpress</a>
                 </li>
                 <li>
-                    <a href="#!" class="text-white">Link 2</a>
-                </li>
-                <li>
-                    <a href="#!" class="text-white">Link 3</a>
-                </li>
-                <li>
-                    <a href="#!" class="text-white">Link 4</a>
+                    <a href="https://itviec.com/" class="text-white">ITviec</a>
                 </li>
             </ul>
         </div>
@@ -39,16 +34,16 @@
 
             <ul class="list-unstyled">
                 <li>
-                    <a href="#!" class="text-white">Link 1</a>
+                    <a href="https://mail.google.com/mail" class="text-white">vodinhnghia85@gmail.com</a>
                 </li>
                 <li>
-                    <a href="#!" class="text-white">Link 2</a>
+                    <a href="https://www.facebook.com/dinhnghia.95/" class="text-white">facebook</a>
                 </li>
                 <li>
-                    <a href="#!" class="text-white">Link 3</a>
+                    <a href="https://chat.zalo.me/" class="text-white">Zalo</a>
                 </li>
                 <li>
-                    <a href="#!" class="text-white">Link 4</a>
+                    <a href="#!" class="text-white">Hotline: 0365572875</a>
                 </li>
             </ul>
         </div>
