--- a/app/views/user/menu.ejs
+++ b/app/views/user/menu.ejs
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="/list_author">List author</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
