--- a/app/views/user/menu.ejs
+++ b/app/views/user/menu.ejs
@@ -24,7 +24,7 @@
 
     </div>
     <form action="/search" method="POST" class="search-btn">
-        <input type="text">
+        <input type="text" name="search">
         <button type="submit" class="btn btn-outline-success bg-white">Search</button>
     </form>
 </nav>
