--- a/app/views/user/info_left_personel.ejs
+++ b/app/views/user/info_left_personel.ejs
@@ -1,29 +1,29 @@
 <div class="col-sm-4 text-center">
-    <% if(data[0].image != '') {%>
+    <% if(data_user[0].avatar!= '') {%>
         <div class="fakeimg_avata">
-            <img src="<%= data[0].avatar %>" alt="image" width="230px" height="225px">
+            <img src="<%= data_user[0].avatar %>" alt="image" width="230px" height="225px">
         </div>
         <% }%>
             <br>
             <ul class="nav nav-pills flex-column text-center text-info">
                 <li class="nav-item"><br>
                     <p>Name:
-                        <%= data[0].name %>
+                        <%= data_user[0].name %>
                     </p>
                 </li>
                 <li class="nav-item">
                     <p>Email:
-                        <%= data[0].email %>
+                        <%= data_user[0].email %>
                     </p>
                 </li>
                 <li class="nav-item">
                     <p>Mobile: 0
-                        <%= data[0].mobile %>
+                        <%= data_user[0].mobile %>
                     </p>
                 </li>
                 <li class="nav-item">
                     <p>Country:
-                        <%= data[0].country %>
+                        <%= data_user[0].country %>
                     </p>
                 </li>
             </ul>
@@ -45,17 +45,21 @@
                         <div class="modal-body">
                             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
-                                    <% if(data[0].image != ''){ %>
-                                        <div class="carousel-item active">
-                                            <img class="d-block w-100" src="<%= data[0].image %>" alt="image" height="400px">
-                                        </div>
-                                        <% } %>
-                                            <% for(let k= data.length - 1; k > 0; k--){ %>
-                                                <% if(data[k].image != ''){ %>
-                                                    <div class="carousel-item">
-                                                        <img class="d-block w-100" src="<%= data[k].image %>" alt="image" height="400px">
-                                                    </div>
-                                                    <%} } %>
+                                    <% if(data.length) { %>
+                                        <% if(data[0].image != ''){ %>
+                                            <div class="carousel-item active">
+                                                <img class="d-block w-100" src="<%= data[0].image %>" alt="image" height="400px">
+                                            </div>
+                                            <% } %>
+
+                                                <% for(let k = data.length - 1; k > 0; k--){ %>
+                                                    <% if(data[k].image != ''){ %>
+                                                        <div class="carousel-item">
+                                                            <img class="d-block w-100" src="<%= data[k].image %>" alt="image" height="400px">
+                                                        </div>
+                                                        <%} } } else {%>
+                                                            <p>not found</p>
+                                                            <% } %>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
