--- a/app/views/user/search.ejs
+++ b/app/views/user/search.ejs
@@ -67,8 +67,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(data_user.length){ 
-                                    for(var i = 0;i < data_user.length;i++) { %>
+                                <% if(data_post.length){ 
+                                    for(var i = 0;i < data_post.length;i++) { %>
                                     <tr>
                                         <td class="text-danger">
                                             <%=i+1 %>.</td>
